force-app/main/default/objects/User/fields/PMC_CPQ_SalesArea__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SalesArea__c</fullName>
    <description>The Sales Areas associated with the user from which the record type and product will be configured.</description>
    <label>Sales Area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC_CPQ_SalesAreaUser</valueSetName>
    </valueSet>
</CustomField>