force-app/main/default/objects/User/fields/PMC_CPQ_SalesOffice__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SalesOffice__c</fullName>
    <label>Sales Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC_CPQ_SalesOfficeCodes</valueSetName>
    </valueSet>
</CustomField>