force-app/main/default/objects/User/fields/PMC_CPQ_SAPExternalUserId__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SAPExternalUserId__c</fullName>
    <description>This field stores the user reference that will be used for Integration purposes with SAP.</description>
    <externalId>true</externalId>
    <label>SAP External User Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>