force-app/main/default/objects/User/fields/PMC_CPQ_SecondaryBusinessType__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SecondaryBusinessType__c</fullName>
    <label>Secondary Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PMC_CPQ_PrimaryBusinessType__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>PMC_CPQ_QuoteBusinessType</valueSetName>
    </valueSet>
</CustomField>