force-app/main/default/objects/User/fields/PMC_SS_DelegateUser__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_DelegateUser__c</fullName>
    <description>This field is used to delegate the work to the user.</description>
    <label>Delegate User</label>
    <relationshipName>OOOUsers</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>