force-app/main/default/objects/User/fields/PMC_SS_OutOfOfficeStartDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_OutOfOfficeStartDate__c</fullName>
    <description>This field is for the user to enter the start date of his out of office.</description>
    <inlineHelpText>Once you reassign these cases, you cannot reassign them back</inlineHelpText>
    <label>Out of office start date</label>
    <type>Date</type>
</CustomField>