force-app/main/default/objects/User/fields/PMC_SS_RegionalDirector__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_RegionalDirector__c</fullName>
    <description>Field used to store the Regional Director of the user</description>
    <label>Regional Director</label>
    <relationshipName>Regional_Directors</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>