force-app/main/default/objects/User/fields/PMC_SS_RegionalManager__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_RegionalManager__c</fullName>
    <description>Field used to store the Regional Manager of the user</description>
    <label>Regional Manager</label>
    <relationshipName>Regional_Managers</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>