force-app/main/default/objects/User/fields/PMC_SS_SalesOffice__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_SalesOffice__c</fullName>
    <description>Specifies the User’s Sales Office</description>
    <label>Sales Office</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BR BA B2C</fullName>
            </value>
            <value>
                <fullName>BR Canais MT B2C</fullName>
            </value>
            <value>
                <fullName>BR East B2C</fullName>
            </value>
            <value>
                <fullName>BR East Feed</fullName>
            </value>
            <value>
                <fullName>BR East Fertilizer</fullName>
            </value>
            <value>
                <fullName>BR Espec Agricolas B2B Specialties</fullName>
            </value>
            <value>
                <fullName>BR Espec Industriais  B2B Specialties</fullName>
            </value>
            <value>
                <fullName>BR Feed B2B</fullName>
            </value>
            <value>
                <fullName>BR Fertilizer B2B1</fullName>
            </value>
            <value>
                <fullName>BR Fertilizer B2B2</fullName>
            </value>
            <value>
                <fullName>BR Fospar</fullName>
            </value>
            <value>
                <fullName>BR GO B2C</fullName>
            </value>
            <value>
                <fullName>BR KAM MEGA FARMER B2C</fullName>
            </value>
            <value>
                <fullName>BR KAM RETAIL NORTE B2C</fullName>
            </value>
            <value>
                <fullName>BR KAM RETAIL SUL B2C</fullName>
            </value>
            <value>
                <fullName>BR KAM Trader GO+MT B2C</fullName>
            </value>
            <value>
                <fullName>BR KAM Trader INT B2C</fullName>
            </value>
            <value>
                <fullName>BR KAM Trader MS B2C</fullName>
            </value>
            <value>
                <fullName>BR MATOPIPA B2C</fullName>
            </value>
            <value>
                <fullName>BR MG Norte B2C</fullName>
            </value>
            <value>
                <fullName>BR MG Sul B2C</fullName>
            </value>
            <value>
                <fullName>BR MOS OPERAÇÕES B2C</fullName>
            </value>
            <value>
                <fullName>BR MS B2C</fullName>
            </value>
            <value>
                <fullName>BR MT NORTE B2C</fullName>
            </value>
            <value>
                <fullName>BR MT OESTE B2C</fullName>
            </value>
            <value>
                <fullName>BR MT SUL B2C</fullName>
            </value>
            <value>
                <fullName>BR North B2C</fullName>
            </value>
            <value>
                <fullName>BR North Feed</fullName>
            </value>
            <value>
                <fullName>BR North Fertilizer</fullName>
            </value>
            <value>
                <fullName>BR PASTAGEM B2C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>