force-app/main/default/objects/User/fields/PMC_SS_SegmentManager__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_SegmentManager__c</fullName>
    <description>Field used to store the Segment Manager of the user</description>
    <label>Segment Manager</label>
    <relationshipName>Segment_Managers</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>