force-app/main/default/objects/User/fields/PMC_SS_SeniorDirectors__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_SeniorDirectors__c</fullName>
    <description>Field used to store the Senior Directors of the user</description>
    <label>Senior Director</label>
    <relationshipName>Senior_Directors</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>