force-app/main/default/objects/User/validationRules/PMC_SS_DelegatedUserOOORule.validationRule-meta.xml
<ValidationRule>
    <fullName>PMC_SS_DelegatedUserOOORule</fullName>
    <active>true</active>
    <description>This validation rule checks if the delegated user is OOO and gives an error.</description>
    <errorConditionFormula>AND(
	NOT(CONTAINS($Profile.Name, &apos;Digital Hub&apos;)),
	NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c),
	NOT(ISBLANK(PMC_SS_DelegateUser__c)),
	NOT(ISBLANK(PMC_SS_DelegateUser__r.PMC_SS_OutOfOfficeEndDate__c)), 
	NOT(ISBLANK(PMC_SS_DelegateUser__r.PMC_SS_OutOfOfficeStartDate__c)),
	OR(
		ISCHANGED(PMC_SS_DelegateUser__c),
		ISCHANGED(PMC_SS_OutOfOfficeStartDate__c),
		ISCHANGED(PMC_SS_OutOfOfficeEndDate__c)
	),
	NOT(ISBLANK(PMC_SS_OutOfOfficeEndDate__c)), 
	NOT(ISBLANK(PMC_SS_OutOfOfficeStartDate__c)),
	OR(
		AND(
			PMC_SS_OutOfOfficeStartDate__c &gt;= PMC_SS_DelegateUser__r.PMC_SS_OutOfOfficeStartDate__c, PMC_SS_OutOfOfficeEndDate__c &lt;= PMC_SS_DelegateUser__r.PMC_SS_OutOfOfficeEndDate__c
		)
	),
	NOT(ISNEW())
)</errorConditionFormula>
    <errorDisplayField>PMC_SS_DelegateUser__c</errorDisplayField>
    <errorMessage>The user you selected is already Out Of Office. Please select another user to delegate.</errorMessage>
</ValidationRule>