force-app/main/default/objects/User/validationRules/PMC_SS_EnterDatesForOutOfOffice.validationRule-meta.xml
<ValidationRule>
    <fullName>PMC_SS_EnterDatesForOutOfOffice</fullName>
    <active>true</active>
    <description>This validation rule checks if the start and end dates are not blank</description>
    <errorConditionFormula>AND(NOT(CONTAINS($Profile.Name, &apos;Digital Hub&apos;)),
NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c),NOT(ISBLANK(PMC_SS_DelegateUser__c)), OR(ISBLANK(PMC_SS_OutOfOfficeStartDate__c),  ISBLANK(PMC_SS_OutOfOfficeEndDate__c)),
NOT(ISNEW()))</errorConditionFormula>
    <errorDisplayField>PMC_SS_OutOfOfficeStartDate__c</errorDisplayField>
    <errorMessage>Please enter Out Off Office start date and end date when entering delegated user</errorMessage>
</ValidationRule>