force-app/main/default/objects/User/validationRules/PMC_SS_OOOStartDateGreaterOrEqualToToday.validationRule-meta.xml
<ValidationRule>
    <fullName>PMC_SS_OOOStartDateGreaterOrEqualToToday</fullName>
    <active>true</active>
    <description>This validation rule checks if the start date selected is not the past date</description>
    <errorConditionFormula>AND(
	NOT(CONTAINS($Profile.Name, &apos;Digital Hub&apos;)),
	NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c),
	PMC_SS_OutOfOfficeStartDate__c &lt; Today(),
	OR(
		ISCHANGED(PMC_SS_OutOfOfficeStartDate__c),
		ISCHANGED(PMC_SS_OutOfOfficeEndDate__c)
		),
	NOT(ISNEW())
)</errorConditionFormula>
    <errorDisplayField>PMC_SS_OutOfOfficeStartDate__c</errorDisplayField>
    <errorMessage>Previous date cannot be selected as a Out Of Office start date</errorMessage>
</ValidationRule>