force-app/main/default/objects/User/listViews/Event_Product_Users.listView-meta.xml
<ListView>
    <fullName>Event_Product_Users</fullName>
    <booleanFilter>1 AND (2 OR 3 OR 4)</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PMC_SS_Profile_Name__c</field>
        <operation>contains</operation>
        <value>Marketing</value>
    </filters>
    <filters>
        <field>PMC_SS_Profile_Name__c</field>
        <operation>equals</operation>
        <value>Product Manager</value>
    </filters>
    <filters>
        <field>PMC_SS_Profile_Name__c</field>
        <operation>equals</operation>
        <value>Sales Leadership</value>
    </filters>
    <label>Event Product Users</label>
</ListView>